syntax = "proto2";

package usercomputeapi;

service UserComputeAPI {
    // RPC call for computing sum of primes
    rpc ComputeSumOfPrimes (ComputeRequest) returns (ComputeResponse);
}

// Request message
message ComputeRequest {
    optional int32 limit = 1;        	// number to compute primes up to
    optional string delimiter = 2;   	// delimiter for output, optional
}

// Response message
message ComputeResponse {
    optional int32 sum = 1;                   // sum of primes
    optional bool success = 2;                // true if computation succeeded
    optional string errorMessage = 3;         // error info if computation failed
}

